--- a/src/main/webapp/styles/main.css
+++ b/src/main/webapp/styles/main.css
@@ -17,3 +17,6 @@ html>body {font-size: 12px;
 .search select{width: 120px;height: 30px;}
 
 .search a{width: 120px;height: 25px;}
+.resource_book{width: 150px;height: 200px; padding: 10px 50px;} 
+.ui-input{width: 210px;height: 30px;}
+.ui-label{width: 85px;display: inline-block;margin-left: 15px;}
